katmanlar oluşturuldu. crud alt yapısı oluşturuluyor.

--- a/Blogum.DataAccess/Blogum.DataAccess.csproj
+++ b/Blogum.DataAccess/Blogum.DataAccess.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Concrete\EntityFramework\" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Blogum.Core\Blogum.Core.csproj" />
+    <ProjectReference Include="..\Blogum.Domain\Blogum.Domain.csproj" />
   </ItemGroup>
 
 </Project>
